// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin error mode builders should generate returningServiceError with includeData toggle 1`] = `
"type MockUserType = {
  name: string;
};

class MockGetUserQueryBuilder {
  private me: MockUserType = {
    name: "",
  };

  private responseMode: "success" | "networkError" | "serviceError" = "success";
  private networkError: Error | null = null;
  private serviceErrors: readonly {
    message: string;
    [key: string]: unknown;
  }[] = [];
  private includeServiceData = true;

  havingMe(me: MockUserType): this {
    this.me = me;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  returningServiceError(
    errors: readonly { message: string; [key: string]: unknown }[] | string,
    options: { includeData?: boolean } = {}
  ): this {
    this.responseMode = "serviceError";
    this.serviceErrors =
      typeof errors === "string" ? [{ message: errors }] : errors;
    this.includeServiceData = options.includeData ?? true;
    return this;
  }

  build(): MockedResponse<GetUserQueryResponse, GetUserQueryVariables> {
    return {
      request: {
        query: GetUserQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "serviceError"
        ? {
            result: {
              errors: this.serviceErrors,
              ...(this.includeServiceData
                ? {
                    data: {
                      __typename: "Query",
                      me: {
                        __typename: "User",
                        name: this.me.name,
                      },
                    },
                  }
                : {}),
            },
          }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                me: {
                  __typename: "User",
                  name: this.me.name,
                },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin fragment builder composition should compose multiple fragment spreads on the same field into a single builder 1`] = `
"class MockUserSummaryFragmentBuilder {
  private name: string = "";

  havingName(name: string): this {
    this.name = name;
    return this;
  }

  build() {
    return {
      name: this.name,
    } as const;
  }
}

class MockUserContactFragmentBuilder {
  private email: string = "";

  havingEmail(email: string): this {
    this.email = email;
    return this;
  }

  build() {
    return {
      email: this.email,
    } as const;
  }
}

type MockUserType = {
  name: string;
  email: string;
};

class MockGetUserMeSelectionBuilder {
  private name: string = "";
  private email: string = "";

  havingName(name: string): this {
    this.name = name;
    return this;
  }
  havingEmail(email: string): this {
    this.email = email;
    return this;
  }

  build() {
    return {
      name: this.name,
      email: this.email,
    } as const;
  }
}

class MockGetUserQueryBuilder {
  private me: MockGetUserMeSelectionBuilder =
    new MockGetUserMeSelectionBuilder();

  private responseMode: "success" | "networkError" | "serviceError" = "success";
  private networkError: Error | null = null;
  private serviceErrors: readonly {
    message: string;
    [key: string]: unknown;
  }[] = [];
  private includeServiceData = true;

  havingMe(me: MockGetUserMeSelectionBuilder): this {
    this.me = me;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  returningServiceError(
    errors: readonly { message: string; [key: string]: unknown }[] | string,
    options: { includeData?: boolean } = {}
  ): this {
    this.responseMode = "serviceError";
    this.serviceErrors =
      typeof errors === "string" ? [{ message: errors }] : errors;
    this.includeServiceData = options.includeData ?? true;
    return this;
  }

  build(): MockedResponse<GetUserQueryResponse, GetUserQueryVariables> {
    return {
      request: {
        query: GetUserQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "serviceError"
        ? {
            result: {
              errors: this.serviceErrors,
              ...(this.includeServiceData
                ? {
                    data: {
                      __typename: "Query",
                      me: {
                        __typename: "User",
                        ...this.me.build(),
                      },
                    },
                  }
                : {}),
            },
          }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                me: {
                  __typename: "User",
                  ...this.me.build(),
                },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin query builders should generate a builder class for a query 1`] = `
"type MockUserType = {
  name: string;
};

class MockGetUserQueryBuilder {
  private me: MockUserType = {
    name: "",
  };

  private responseMode: "success" | "networkError" | "serviceError" = "success";
  private networkError: Error | null = null;
  private serviceErrors: readonly {
    message: string;
    [key: string]: unknown;
  }[] = [];
  private includeServiceData = true;

  havingMe(me: MockUserType): this {
    this.me = me;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  returningServiceError(
    errors: readonly { message: string; [key: string]: unknown }[] | string,
    options: { includeData?: boolean } = {}
  ): this {
    this.responseMode = "serviceError";
    this.serviceErrors =
      typeof errors === "string" ? [{ message: errors }] : errors;
    this.includeServiceData = options.includeData ?? true;
    return this;
  }

  build(): MockedResponse<GetUserQueryResponse, GetUserQueryVariables> {
    return {
      request: {
        query: GetUserQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "serviceError"
        ? {
            result: {
              errors: this.serviceErrors,
              ...(this.includeServiceData
                ? {
                    data: {
                      __typename: "Query",
                      me: {
                        __typename: "User",
                        name: this.me.name,
                      },
                    },
                  }
                : {}),
            },
          }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                me: {
                  __typename: "User",
                  name: this.me.name,
                },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin user defined classes should support user defined classes with a named export 1`] = `
"import { MockUserType } from "./userModel";

class MockGetUsersQueryBuilder {
  private users: MockUserType[] = [];

  private responseMode: "success" | "networkError" | "serviceError" = "success";
  private networkError: Error | null = null;
  private serviceErrors: readonly {
    message: string;
    [key: string]: unknown;
  }[] = [];
  private includeServiceData = true;

  havingUsers(users: MockUserType[]): this {
    this.users = users;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  returningServiceError(
    errors: readonly { message: string; [key: string]: unknown }[] | string,
    options: { includeData?: boolean } = {}
  ): this {
    this.responseMode = "serviceError";
    this.serviceErrors =
      typeof errors === "string" ? [{ message: errors }] : errors;
    this.includeServiceData = options.includeData ?? true;
    return this;
  }

  build(): MockedResponse<GetUsersQueryResponse, GetUsersQueryVariables> {
    return {
      request: {
        query: GetUsersQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "serviceError"
        ? {
            result: {
              errors: this.serviceErrors,
              ...(this.includeServiceData
                ? {
                    data: {
                      __typename: "Query",
                      users: this.users.map((item) => ({
                        __typename: "User",
                        name: item.name,
                        age: item.age,
                        deletedAt: item.deletedAt,
                        otherField: item.otherField,
                      })),
                    },
                  }
                : {}),
            },
          }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                users: this.users.map((item) => ({
                  __typename: "User",
                  name: item.name,
                  age: item.age,
                  deletedAt: item.deletedAt,
                  otherField: item.otherField,
                })),
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;
